--- a/po/pt.po
+++ b/po/pt.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-29 22:08-0400\n"
-"PO-Revision-Date: 2015-09-09 16:38+0000\n"
-"Last-Translator: David Pires <Unknown>\n"
+"POT-Creation-Date: 2019-05-30 22:02-0400\n"
+"PO-Revision-Date: 2020-05-05 22:14+0000\n"
+"Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2019-05-30 03:24+0000\n"
-"X-Generator: Launchpad (build 18968)\n"
+"X-Launchpad-Export-Date: 2020-06-09 10:56+0000\n"
+"X-Generator: Launchpad (build ef9fc486e875d54078fa61cf91e898b895125d89)\n"
 "Language: pt\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -116,7 +116,7 @@ msgstr "Mover para baixo"
 #. Translators: Treeview toolbar button to sort the currently open submenu alphabetically.
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Sort Alphabetically"
-msgstr ""
+msgstr "Ordenar Alfabeticamente"
 
 #. Translators: Placeholder text/hint for the application name entry.
 #: ../data/ui/MenulibreWindow.ui.h:35
@@ -422,7 +422,7 @@ msgstr ""
 #. Translators: "Implements" text entry. A list of interfaces that this application implements.
 #: ../data/ui/MenulibreWindow.ui.h:127
 msgid "Implements"
-msgstr ""
+msgstr "Implementa"
 
 #. Translators: Command line option to display debug messages on stdout
 #: ../menulibre/__init__.py:34
@@ -553,7 +553,7 @@ msgstr ""
 #: ../menulibre/Dialogs.py:232
 #, python-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "Falhou ao guardar \"%s\"."
 
 #. Translators: Save Error Dialog, secondary text.
 #: ../menulibre/Dialogs.py:235
@@ -773,7 +773,7 @@ msgstr "Re_verter"
 #. Translators: Execute action label
 #: ../menulibre/MenulibreApplication.py:453
 msgid "_Execute"
-msgstr ""
+msgstr "_Executar"
 
 #. Translators: Execute action tooltip
 #: ../menulibre/MenulibreApplication.py:455
