--- a/po/da.po
+++ b/po/da.po
@@ -6,16 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-30 22:02-0400\n"
+"POT-Creation-Date: 2020-06-09 18:45-0400\n"
 "PO-Revision-Date: 2020-03-27 17:32+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2020-06-09 10:56+0000\n"
 "X-Generator: Launchpad (build ef9fc486e875d54078fa61cf91e898b895125d89)\n"
-"Language: da\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -971,11 +971,11 @@ msgstr "%s programmet '%s' blev ikke fundet i PATH"
 #: ../menulibre/util.py:681
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to "
-"GLib.shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to GLib."
+"shell_parse_argv, error: %s"
 msgstr ""
-"%s programmet '%s' er ikke en gyldig skalkommando i følge "
-"GLib.shell_parse_argv, fejl: %s"
+"%s programmet '%s' er ikke en gyldig skalkommando i følge GLib."
+"shell_parse_argv, fejl: %s"
 
 #. Translators: This error is displayed for a failing desktop file where
 #. errors were detected but the file seems otherwise valid.
@@ -1011,7 +1011,8 @@ msgstr "Ukendt fejl. Skrivebordsfilen ser ud til at være gyldig."
 #~ msgstr "Søgetermer…"
 
 #~ msgid "If you don't save the launcher, all the changes will be lost.'"
-#~ msgstr "Alle ændringerne vil gå tabt, hvis ikke du gemmer programstarteren.'"
+#~ msgstr ""
+#~ "Alle ændringerne vil gå tabt, hvis ikke du gemmer programstarteren.'"
 
 #~ msgid "Add _Launcher..."
 #~ msgstr "Tilføj _programstarter..."
@@ -1097,7 +1098,5 @@ msgstr "Ukendt fejl. Skrivebordsfilen ser ud til at være gyldig."
 #~ msgid ""
 #~ "\"GenericName\": Generic name of the application, for example \"Web "
 #~ "Browser\"."
-#~ msgstr "\"GenericName\": Generisk navn af programmet, f.eks. \"Webbrowser\"."
-
-#~ msgid "Unknown error. Desktop file appears to be valid."
-#~ msgstr "Ukendt fejl. Skrivebordsfilen ser ud til at være gyldig."
+#~ msgstr ""
+#~ "\"GenericName\": Generisk navn af programmet, f.eks. \"Webbrowser\"."
