--- a/po/gl.po
+++ b/po/gl.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2019-05-30 22:02-0400\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2020-06-09 18:45-0400\n"
 "PO-Revision-Date: 2020-03-27 17:34+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -944,8 +945,7 @@ msgstr "Novo elemento do menú"
 #: ../menulibre/util.py:619
 #, python-format
 msgid "Unable to load desktop file due to the following error: %s"
-msgstr ""
-"Non foi posíbel cargar o ficheiro desktop debido ao seguinte erro: %s"
+msgstr "Non foi posíbel cargar o ficheiro desktop debido ao seguinte erro: %s"
 
 #. Translators: This error is displayed when the first group in a
 #. failing desktop file is incorrect. "Start group" can be safely
@@ -977,8 +977,8 @@ msgstr ""
 #: ../menulibre/util.py:681
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to "
-"GLib.shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to GLib."
+"shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -1047,6 +1047,3 @@ msgstr "Produciuse un erro descoñecido. O ficheiro Desktop parece válido."
 
 #~ msgid "Application Comment"
 #~ msgstr "Comentario do aplicativo"
-
-#~ msgid "Unknown error. Desktop file appears to be valid."
-#~ msgstr "Produciuse un erro descoñecido. O ficheiro Desktop parece válido."
