--- a/po/sk.po
+++ b/po/sk.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-30 22:02-0400\n"
+"POT-Creation-Date: 2020-06-09 18:45-0400\n"
 "PO-Revision-Date: 2016-10-07 20:37+0000\n"
 "Last-Translator: Dusan Kazik <prescott66@gmail.com>\n"
 "Language-Team: Slovak <sk@li.org>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2020-06-09 10:56+0000\n"
 "X-Generator: Launchpad (build ef9fc486e875d54078fa61cf91e898b895125d89)\n"
-"Language: sk\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -141,9 +141,8 @@ msgstr ""
 "Program na spustenie s argumentami. Tento kľúč je požadovaný, ak voľba "
 "DBusActivatable nie je nastavená na „True“, alebo ak potrebujete mať "
 "kompatibilitu s implementáciami, ktoré nerozumejú aktivácii zbernice D-Bus.\n"
-"Pre zoznam podporovaných argumentov si prezrite "
-"http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
-"latest.html#exec-variables."
+"Pre zoznam podporovaných argumentov si prezrite http://standards.freedesktop."
+"org/desktop-entry-spec/desktop-entry-spec-latest.html#exec-variables."
 
 #. Translators: Treeview column for an action item
 #: ../data/ui/MenulibreWindow.ui.h:42
@@ -402,8 +401,8 @@ msgid ""
 msgstr ""
 "Nastavte tento kľúč na „True“, ak aplikácia podporuje aktiváciu "
 "prostredníctvom zbernice D-Bus a chcete ju použiť.\n"
-"Pre viac informácií navštívte adresu "
-"http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html."
+"Pre viac informácií navštívte adresu http://standards.freedesktop.org/"
+"desktop-entry-spec/latest/ar01s07.html."
 
 #. Translators: "DBusActivatable" on/off switch. When enabled, the application is said to be activated via DBUS.
 #: ../data/ui/MenulibreWindow.ui.h:123
@@ -970,8 +969,8 @@ msgstr ""
 #: ../menulibre/util.py:681
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to "
-"GLib.shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to GLib."
+"shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -1035,7 +1034,8 @@ msgstr ""
 #~ msgstr "Výber spustiteľného súboru..."
 
 #~ msgid "Cannot add subdirectories to preinstalled system paths."
-#~ msgstr "Nedajú sa pridať podadresáre do predinštalovaných systémových ciest."
+#~ msgstr ""
+#~ "Nedajú sa pridať podadresáre do predinštalovaných systémových ciest."
 
 #~ msgid "Select an image"
 #~ msgstr "Výber obrázku"
