--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-30 22:02-0400\n"
+"POT-Creation-Date: 2020-06-09 18:45-0400\n"
 "PO-Revision-Date: 2020-03-27 17:34+0000\n"
 "Last-Translator: 玉堂白鹤 <yjwork@qq.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2020-06-09 10:56+0000\n"
 "X-Generator: Launchpad (build ef9fc486e875d54078fa61cf91e898b895125d89)\n"
-"Language: zh_CN\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -174,7 +174,9 @@ msgstr "在终端中运行"
 msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
-msgstr "如果设置为“打开”，则会发送启动通知。 通常意味着应用程序启动时会显示一个忙碌光标。"
+msgstr ""
+"如果设置为“打开”，则会发送启动通知。 通常意味着应用程序启动时会显示一个忙碌光"
+"标。"
 
 #. Translators: "StartupNotify" on/off switch. When enabled, a busy cursor is shown while the application launches.
 #: ../data/ui/MenulibreWindow.ui.h:56
@@ -277,8 +279,9 @@ msgid ""
 "Possible values include: Budgie, Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, "
 "MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
-"此项目不应该出现在这些桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：Budgie、Cinnamon、EDE、GNOME、KDE、LXDE、"
-"LXQt、MATE、Pantheon、Razor、ROX、TDE、Unity、XFCE、Old"
+"此项目不应该出现在这些桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项"
+"包括：Budgie、Cinnamon、EDE、GNOME、KDE、LXDE、LXQt、MATE、Pantheon、Razor、"
+"ROX、TDE、Unity、XFCE、Old"
 
 #. Translators: "NotShowIn" text entry. A list of environments that should not display this entry.
 #: ../data/ui/MenulibreWindow.ui.h:92
@@ -294,8 +297,9 @@ msgid ""
 "Possible values include: Budgie, Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, "
 "MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
-"此项目应当出现在这些桌面环境，而还是其它桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：Budgie、Cinnamon、EDE、GNOME、"
-"KDE、LXDE、LXQt、MATE、Pantheon、Razor、ROX、TDE、Unity、XFCE、Old"
+"此项目应当出现在这些桌面环境，而还是其它桌面环境中。您仅可以选择“仅在其中显"
+"示”选项。可能的选项包括：Budgie、Cinnamon、EDE、GNOME、KDE、LXDE、LXQt、"
+"MATE、Pantheon、Razor、ROX、TDE、Unity、XFCE、Old"
 
 #. Translators: "OnlyShowIn" text entry. A list of environments that should display this entry.
 #: ../data/ui/MenulibreWindow.ui.h:97
@@ -938,8 +942,8 @@ msgstr ""
 #: ../menulibre/util.py:681
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to "
-"GLib.shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to GLib."
+"shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -986,6 +990,3 @@ msgstr "未知错误。 桌面文件似乎是有效的。"
 
 #~ msgid "Select an image"
 #~ msgstr "选择图片"
-
-#~ msgid "Unknown error. Desktop file appears to be valid."
-#~ msgstr "未知错误。 桌面文件似乎是有效的。"
