--- a/menulibre.1
+++ b/menulibre.1
@@ -33,6 +33,6 @@ is maintained online at
 .URL "https://wiki.bluesabre.org/menulibre-docs" "the authors documentation portal" "."
 .SH BUGS
 Please report any bugs found at
-.URL "https://bugs.launchpad.net/menulibre" "launchpad.net" "."
+.URL "https://github.com/bluesabre/menulibre/issues" "GitHub" "."
 .SH AUTHOR
 Sean Davis (smd.seandavis@gmail.com)
