--- a/menulibre.1
+++ b/menulibre.1
@@ -35,4 +35,4 @@ is maintained online at
 Please report any bugs found at
 .URL "https://github.com/bluesabre/menulibre/issues" "GitHub" "."
 .SH AUTHOR
-Sean Davis (smd.seandavis@gmail.com)
+Sean Davis (sean@bluesabre.org)
