Update wiki URLs

--- a/menulibre.1
+++ b/menulibre.1
@@ -30,7 +30,7 @@ Use toolbar layout (server side decorations)
 The full documentation for
 .B menulibre
 is maintained online at
-.URL "https://wiki.bluesabre.org/menulibre-docs" "the authors documentation portal" "."
+.URL "https://github.com/bluesabre/menulibre/wiki" "the MenuLibre Wiki" "."
 .SH BUGS
 Please report any bugs found at
 .URL "https://github.com/bluesabre/menulibre/issues" "GitHub" "."
