Use the MenuLibre wiki for desktop entry key descriptions (Fixes #48)

--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-15 05:10-0400\n"
+"POT-Creation-Date: 2020-06-15 07:20-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -134,8 +134,8 @@ msgid ""
 "Program to execute with arguments. This key is required if DBusActivatable "
 "is not set to \"True\" or if you need compatibility with implementations "
 "that do not understand D-Bus activation.\n"
-"See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
-"latest.html#exec-variables for a list of supported arguments."
+"See https://github.com/bluesabre/menulibre/wiki/Recognized-Desktop-Entry-"
+"Keys#exec for a list of supported arguments."
 msgstr ""
 
 #. Translators: Treeview column for an action item
@@ -367,8 +367,8 @@ msgstr ""
 msgid ""
 "Set this key to \"True\" if D-Bus activation is supported for this "
 "application and you want to use it.\n"
-"See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
-"for more information."
+"See https://github.com/bluesabre/menulibre/wiki/Recognized-Desktop-Entry-"
+"Keys#dbusactivatable for more information."
 msgstr ""
 
 #. Translators: "DBusActivatable" on/off switch. When enabled, the application is said to be activated via DBUS.
@@ -393,8 +393,8 @@ msgctxt ""
 msgid ""
 "Set this key to \"True\" if this application prefers to be run on a more "
 "powerful GPU if available.\n"
-"See https://specifications.freedesktop.org/desktop-entry-spec/desktop-entry-"
-"spec-latest.html#recognized-keys for more information."
+"See https://github.com/bluesabre/menulibre/wiki/Recognized-Desktop-Entry-"
+"Keys#prefersnondefaultgpu for more information."
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:130
